--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   "homepage": "https://github.com/afishr/webgl-practice#readme",
   "dependencies": {
     "gl-matrix": "^3.1.0"
-  }
+  },
+  "devDependencies": {}
 }
